--- a/common/build.gradle
+++ b/common/build.gradle
@@ -33,7 +33,8 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
-    implementation 'com.github.Baneeishaque:Android_Common_Utils_API_14:a69a4e1e36'
+//    implementation 'com.github.Baneeishaque:Android_Common_Utils_API_14:a69a4e1e36'
+    implementation 'com.github.Baneeishaque:Android_Common_Utils_API_14:4e3985419c'
     implementation 'com.github.Baneeishaque:Android_Common_Utils_API_1:7359adffb3'
 
     testImplementation 'junit:junit:4.12'
