--- a/.gitignore
+++ b/.gitignore
@@ -42,14 +42,14 @@ captures/
 *.iml
 .idea/workspace.xml
 .idea/tasks.xml
-# .idea/gradle.xml
+.idea/gradle.xml
 .idea/assetWizardSettings.xml
 # .idea/dictionaries
 .idea/libraries
 .idea/caches
 # Android Studio 3 in .gitignore file.
 .idea/caches/build_file_checksums.ser
-# .idea/modules.xml
+.idea/modules.xml
 
 # Keystore files
 # Uncomment the following lines if you do not want to check your keystore files in.
@@ -139,8 +139,8 @@ obj/
 .idea/.name
 .idea/compiler.xml
 .idea/copyright/profiles_settings.xml
-# .idea/encodings.xml
-# .idea/misc.xml
+.idea/encodings.xml
+.idea/misc.xml
 .idea/scopes/scope_settings.xml
 # .idea/vcs.xml
 .idea/jsLibraryMappings.xml
@@ -228,7 +228,7 @@ fabric.properties
 # since they will be recreated, and may cause churn.  Uncomment if using
 # auto-import.
 # .idea/modules.xml
-# .idea/*.iml
+.idea/*.iml
 # .idea/modules
 
 # CMake
@@ -382,3 +382,8 @@ gradle-app.setting
 **/build/
 
 # End of https://www.gitignore.io/api/java,linux,macos,gradle,android,windows,intellij,notepadpp,androidstudio,visualstudiocode
+.idea/encodings.xml
+.idea/gradle.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/runConfigurations.xml
