--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,17 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+
     repositories {
+
         google()
         jcenter()
-        gradlePluginPortal()
+//        gradlePluginPortal()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.1'
-        classpath "com.github.plnice:canidropjetifier:0.4"
+
+        classpath 'com.android.tools.build:gradle:3.6.2'
+//        classpath "com.github.plnice:canidropjetifier:0.4"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -16,7 +19,9 @@ buildscript {
 }
 
 allprojects {
+
     repositories {
+
         google()
         jcenter()
         maven { url "https://jitpack.io" }
@@ -24,7 +29,8 @@ allprojects {
 }
 
 task clean(type: Delete) {
+
     delete rootProject.buildDir
 }
 
-apply plugin: "com.github.plnice.canidropjetifier"
+//apply plugin: "com.github.plnice.canidropjetifier"
