--- a/common/build.gradle
+++ b/common/build.gradle
@@ -38,9 +38,7 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-
-    implementation 'com.github.Baneeishaque:Android_Common_Utils_API_1:0726486cb3'
-    implementation 'com.github.Baneeishaque:Android_Common_Utils_API_14:c1762751c7'
+    implementation project(path: ':Utils_1:common1')
 
     testImplementation 'junit:junit:4.13'
 
