--- a/common/build.gradle
+++ b/common/build.gradle
@@ -2,12 +2,13 @@ apply plugin: 'com.android.library'
 
 android {
 
-    compileSdkVersion 29
+    compileSdkVersion 30
+    buildToolsVersion '30.0.2'
 
     defaultConfig {
 
         minSdkVersion 17
-        targetSdkVersion 29
+        targetSdkVersion 30
 
         versionCode 1
         versionName "1.0"
@@ -36,8 +37,8 @@ dependencies {
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0'
     implementation project(path: ':Utils_1:common1')
 
     testImplementation 'junit:junit:4.13'
