--- a/common/build.gradle
+++ b/common/build.gradle
@@ -14,6 +14,8 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        multiDexEnabled true
     }
 
     buildTypes {
@@ -99,6 +101,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
     implementation project(path: ':Utils_1:common1')
+    implementation project(path: ':Utils_14:common14')
 
     testImplementation 'junit:junit:4.13'
 }
