--- a/build.gradle
+++ b/build.gradle
@@ -5,16 +5,13 @@ buildscript {
     repositories {
 
         google()
-        jcenter()
-//        gradlePluginPortal()
+        mavenCentral()
+        gradlePluginPortal()
     }
     dependencies {
 
-        classpath 'com.android.tools.build:gradle:4.0.1'
-//        classpath "com.github.plnice:canidropjetifier:0.4"
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath 'com.android.tools.build:gradle:7.0.0-alpha08'
+        classpath "com.github.plnice:canidropjetifier:0.4"
     }
 }
 
@@ -24,6 +21,7 @@ allprojects {
 
         google()
         jcenter()
+        mavenCentral()
         maven { url "https://jitpack.io" }
     }
 }
@@ -33,4 +31,4 @@ task clean(type: Delete) {
     delete rootProject.buildDir
 }
 
-//apply plugin: "com.github.plnice.canidropjetifier"
+apply plugin: "com.github.plnice.canidropjetifier"
