--- a/common17/build.gradle
+++ b/common17/build.gradle
@@ -94,8 +94,9 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation project(path: ':Utils_1:common1')
-    implementation project(path: ':Utils_14:common14')
+
+    implementation project(path: ':Utils14:common14')
+    implementation project(path: ':Utils1:common1')
 
     testImplementation 'junit:junit:4.13.2'
 }
