--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ buildscript {
 
         classpath 'com.android.tools.build:gradle:7.0.0-alpha08'
         classpath "com.github.plnice:canidropjetifier:0.5"
+        classpath 'com.google.gms:google-services:4.3.5'
     }
 }
 
